--- a/app/src/main/res/layout/activity_text.xml
+++ b/app/src/main/res/layout/activity_text.xml
@@ -27,7 +27,7 @@
             android:gravity="center"
             android:textColor="#3F51B5"
             android:textSize="24sp"
-            android:text="文本加密解密"/>
+            />
 
         <LinearLayout
             android:orientation="horizontal"
@@ -39,6 +39,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:textSize="18sp"
+                android:background="?android:attr/selectableItemBackgroundBorderless"
+                android:layout_alignParentBottom="true"
                 android:text="输入密码:" />
 
             <EditText
@@ -73,6 +75,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:background="?android:attr/selectableItemBackgroundBorderless"
+                android:layout_alignParentBottom="true"
                 android:text="加密"
                 android:textAllCaps="false"/>
 
@@ -81,6 +85,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:background="?android:attr/selectableItemBackgroundBorderless"
+                android:layout_alignParentBottom="true"
                 android:text="解密"
                 android:textAllCaps="false"/>
         </LinearLayout>
@@ -109,6 +115,8 @@
             android:id="@+id/copyOutputButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
+            android:layout_alignParentBottom="true"
             android:text="复制输出结果"
             android:textAllCaps="false"/>
 
