--- a/app/src/main/res/layout/activity_pic.xml
+++ b/app/src/main/res/layout/activity_pic.xml
@@ -27,28 +27,22 @@
             android:gravity="center"
             android:textColor="#3F51B5"
             android:textSize="24sp"
-            android:text="图片解密预览"/>
+            />
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp">
-
-            <TextView
-                android:layout_width="90dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:textSize="18sp"
-                android:text="输入密码:" />
-
-            <EditText
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:hint="输入密码"
+            app:endIconMode="password_toggle">
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/passwordEditText"
-                android:layout_width="500dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_gravity="center_vertical"
-                android:inputType="textPassword"/>
-        </LinearLayout>
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <LinearLayout
             android:orientation="horizontal"
@@ -59,10 +53,12 @@
                 android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:background="?android:attr/selectableItemBackgroundBorderless"
+                android:layout_alignParentBottom="true"
                 android:id="@+id/readPicButton"
                 android:text="读取文件"/>
 
-            <EditText
+            <TextView
                 android:id="@+id/readPicEditText"
                 android:layout_width="500dp"
                 android:layout_height="wrap_content"
@@ -71,10 +67,13 @@
 
         </LinearLayout>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/decryptPicButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:cornerRadius="30dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:text="解密预览"
             android:textAllCaps="false"/>
         <LinearLayout
