--- a/app/src/main/res/layout/activity_text.xml
+++ b/app/src/main/res/layout/activity_text.xml
@@ -29,28 +29,20 @@
             android:textSize="24sp"
             />
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp">
-
-            <TextView
-                android:layout_width="90dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:textSize="18sp"
-                android:background="?android:attr/selectableItemBackgroundBorderless"
-                android:layout_alignParentBottom="true"
-                android:text="输入密码:" />
-
-            <EditText
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:hint="输入密码"
+            app:endIconMode="password_toggle">
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/passwordEditText"
-                android:layout_width="500dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_gravity="center_vertical"
-                android:inputType="textPassword"/>
-        </LinearLayout>
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <EditText
             android:id="@+id/inputEditText"
@@ -70,32 +62,37 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/encryptButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:cornerRadius="30dp"
                 android:layout_weight="1"
-                android:background="?android:attr/selectableItemBackgroundBorderless"
-                android:layout_alignParentBottom="true"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:text="加密"
                 android:textAllCaps="false"/>
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/decryptButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="?android:attr/selectableItemBackgroundBorderless"
-                android:layout_alignParentBottom="true"
+                app:cornerRadius="30dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:text="解密"
                 android:textAllCaps="false"/>
         </LinearLayout>
 
-        <!--    <EditText-->
-        <!--        android:id="@+id/outputEditText"-->
-        <!--        android:layout_width="match_parent"-->
-        <!--        android:layout_height="wrap_content"-->
-        <!--        android:hint="输出结果" />-->
+<!--        <com.google.android.material.button.MaterialButton-->
+<!--            android:id="@+id/copyOutputButton"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="复制输出结果"-->
+<!--            android:layout_gravity="center_horizontal"-->
+<!--            app:cornerRadius="30dp"-->
+<!--            android:textAllCaps="false"/>-->
 
         <EditText
             android:id="@+id/outputEditText"
@@ -111,13 +108,13 @@
             android:background="@android:drawable/edit_text"
             android:hint="输出结果" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/copyOutputButton"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="?android:attr/selectableItemBackgroundBorderless"
-            android:layout_alignParentBottom="true"
             android:text="复制输出结果"
+            android:layout_gravity="center_horizontal"
+            app:cornerRadius="30dp"
             android:textAllCaps="false"/>
 
         <!--    <ImageView-->
