--- a/app/src/main/res/layout/activity_file.xml
+++ b/app/src/main/res/layout/activity_file.xml
@@ -37,7 +37,7 @@
             android:layout_marginBottom="12dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:hint="输入密码"
+            android:hint="@string/enter_password"
             app:endIconMode="password_toggle">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/passwordEditText"
@@ -56,8 +56,7 @@
                 android:layout_gravity="center_vertical"
                 android:id="@+id/readFile"
                 android:background="?android:attr/selectableItemBackgroundBorderless"
-                android:layout_alignParentBottom="true"
-                android:text="读取文件"/>
+                android:text="@string/read_file"/>
 
             <TextView
                 android:id="@+id/readPathEditText"
@@ -80,7 +79,7 @@
                 android:id="@+id/saveFile"
                 android:background="?android:attr/selectableItemBackgroundBorderless"
                 android:layout_alignParentBottom="true"
-                android:text="写入文件"/>
+                android:text="@string/write_file"/>
 
             <TextView
                 android:id="@+id/savePathEditText"
@@ -104,7 +103,7 @@
                 android:layout_marginRight="10dp"
                 app:cornerRadius="30dp"
                 app:backgroundTint="@color/colorPrimaryDark"
-                android:text="加密"
+                android:text="@string/encrypt"
                 android:textAllCaps="false"/>
 
             <com.google.android.material.button.MaterialButton
@@ -116,7 +115,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 app:backgroundTint="@color/colorPrimaryDark"
-                android:text="解密"
+                android:text="@string/decrypt"
                 android:textAllCaps="false"/>
 
             <ProgressBar
