--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,25 +17,154 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@color/colorPrimary"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
-
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+        </androidx.appcompat.widget.Toolbar>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#fafafa"
+            android:hardwareAccelerated="true"
+            android:orientation="vertical">
+            <!-- 顶部地址栏 -->
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-                <TextView
-                    android:id="@+id/textView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:layout_gravity="center"
-                    android:textColor="#3F51B5"
-                    android:textSize="24sp"
-                    android:text="加解密测试APP"/>
+                android:layout_height="@dimen/top_bar_height"
+                android:orientation="horizontal"
+                android:background="@drawable/top_bar_bg">
+
+                <ImageView
+                    android:id="@+id/webIcon"
+                    android:layout_width="@dimen/top_bar_height"
+                    android:layout_height="@dimen/top_bar_height"
+                    android:contentDescription="favicon"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:padding="11dp"
+                    android:src="@drawable/internet"
+                    android:background="#01000000"/>
+
+                <EditText
+                    android:id="@+id/textUrl"
+                    android:layout_width="0dp"
+                    android:layout_height="34dp"
+                    android:layout_weight="1"
+                    android:layout_marginTop="3dp"
+                    android:background="#01000000"
+                    android:hint="@string/input_url"
+                    android:imeOptions="actionGo"
+                    android:inputType="textUri"
+                    android:maxLines="1"
+                    android:textSize="15sp"
+                    android:textColor="#606060"
+                    android:textColorHint="#9f9f9f"/>
+
+                <ImageView
+                    android:id="@+id/btnStart"
+                    android:layout_width="@dimen/top_bar_height"
+                    android:layout_height="@dimen/top_bar_height"
+                    android:contentDescription="refresh"
+                    android:padding="11dp"
+                    android:layout_marginRight="2dp"
+                    android:layout_marginEnd="2dp"
+                    android:src="@drawable/refresh"
+                    android:background="#01000000"/>
 
             </LinearLayout>
 
+            <!-- 浏览器容器区域 -->
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:layout_marginTop="1dp"
+                android:layout_marginBottom="1dp"
+                android:background="#d1d1d1">
 
+                <WebView
+                    android:id="@+id/webView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+                <!-- 网页进度条 -->
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:max="100"
+                    android:progress="50" />
+            </FrameLayout>
+
+            <!-- 底部导航栏 -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:baselineAligned="false"
+                android:orientation="horizontal">
+
+                <!-- 后退按钮 -->
+                <RelativeLayout style="@style/NavItem">
+
+                    <ImageView
+                        android:id="@+id/goBack"
+                        style="@style/NavIcon"
+                        android:contentDescription="@string/nav_left"
+                        android:src="@drawable/nav_left" />
+
+                </RelativeLayout>
+
+                <!-- 前进按钮 -->
+                <RelativeLayout style="@style/NavItem">
+
+                    <ImageView
+                        android:id="@+id/goForward"
+                        style="@style/NavIcon"
+                        android:contentDescription="@string/nav_right"
+                        android:src="@drawable/nav_right" />
+
+                </RelativeLayout>
+
+                <!-- 菜单 -->
+                <RelativeLayout style="@style/NavItem">
+
+                    <ImageView
+                        android:id="@+id/navSet"
+                        style="@style/NavIcon"
+                        android:contentDescription="@string/nav_set"
+                        android:src="@drawable/nav_set" />
+
+                </RelativeLayout>
+
+                <!-- 窗口按钮 -->
+                <RelativeLayout style="@style/NavItem">
+
+
+                    <ImageView
+                        style="@style/NavIcon"
+                        android:contentDescription="@string/nav_page"
+                        android:src="@drawable/nav_page" />
+
+                    <TextView
+                        style="@style/NavIcon"
+                        android:gravity="center"
+                        android:text="1"
+                        android:textAlignment="center"
+                        android:textColor="#555"
+                        android:textSize="12sp" />
+
+                </RelativeLayout>
+
+                <!-- 主页按钮 -->
+                <RelativeLayout style="@style/NavItem">
+
+                    <ImageView
+                        android:id="@+id/goHome"
+                        style="@style/NavIcon"
+                        android:contentDescription="@string/nav_home"
+                        android:src="@drawable/nav_home" />
+
+                </RelativeLayout>
+            </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
 
     <com.google.android.material.navigation.NavigationView
