--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -16,21 +16,21 @@
         </menu>
     </item>
 
-    <item android:title="功能">
+    <item android:title="加密信息功能">
         <menu>
         <group android:checkableBehavior="single">
             <item
                 android:id="@+id/navTextLayout"
                 android:icon="@drawable/ic_text"
-                android:title="文本" />
+                android:title="文本加密" />
             <item
                 android:id="@+id/navFileLayout"
                 android:icon="@drawable/ic_file"
-                android:title="文件" />
+                android:title="文件加密" />
             <item
                 android:id="@+id/navPicLayout"
                 android:icon="@drawable/ic_pic"
-                android:title="图片" />
+                android:title="图片加密" />
         </group>
         </menu>
     </item>
