--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
                     android:focusable="true"
                     android:focusableInTouchMode="true"
                     android:padding="11dp"
-                    android:src="@drawable/internet"
+                    android:src="@drawable/web_internet"
                     android:background="#01000000"/>
 
                 <EditText
@@ -66,7 +66,7 @@
                     android:padding="11dp"
                     android:layout_marginRight="2dp"
                     android:layout_marginEnd="2dp"
-                    android:src="@drawable/refresh"
+                    android:src="@drawable/web_refresh"
                     android:background="#01000000"/>
 
             </LinearLayout>
@@ -108,7 +108,7 @@
                         android:id="@+id/goBack"
                         style="@style/NavIcon"
                         android:contentDescription="@string/nav_left"
-                        android:src="@drawable/nav_left" />
+                        android:src="@drawable/web_left" />
 
                 </RelativeLayout>
 
@@ -119,7 +119,7 @@
                         android:id="@+id/goForward"
                         style="@style/NavIcon"
                         android:contentDescription="@string/nav_right"
-                        android:src="@drawable/nav_right" />
+                        android:src="@drawable/web_right" />
 
                 </RelativeLayout>
 
@@ -130,7 +130,7 @@
                         android:id="@+id/navSet"
                         style="@style/NavIcon"
                         android:contentDescription="@string/nav_set"
-                        android:src="@drawable/nav_set" />
+                        android:src="@drawable/web_setting" />
 
                 </RelativeLayout>
 
@@ -141,7 +141,7 @@
                     <ImageView
                         style="@style/NavIcon"
                         android:contentDescription="@string/nav_page"
-                        android:src="@drawable/nav_page" />
+                        android:src="@drawable/web_page" />
 
                     <TextView
                         style="@style/NavIcon"
@@ -160,7 +160,7 @@
                         android:id="@+id/goHome"
                         style="@style/NavIcon"
                         android:contentDescription="@string/nav_home"
-                        android:src="@drawable/nav_home" />
+                        android:src="@drawable/web_home" />
 
                 </RelativeLayout>
             </LinearLayout>
