--- a/app/src/main/res/layout/activity_file.xml
+++ b/app/src/main/res/layout/activity_file.xml
@@ -45,50 +45,219 @@
             android:layout_height="wrap_content" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp">
+<!--        <LinearLayout-->
+<!--            android:orientation="horizontal"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="60dp">-->
 
-            <Button
-                android:layout_width="90dp"
+<!--            <Button-->
+<!--                android:layout_width="90dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="center_vertical"-->
+<!--                android:id="@+id/readFile"-->
+<!--                android:background="?android:attr/selectableItemBackgroundBorderless"-->
+<!--                android:text="@string/read_file"/>-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/readPathEditText"-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_weight="1"-->
+<!--                android:layout_gravity="center_vertical" />-->
+
+<!--        </LinearLayout>-->
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="12dp"
+            app:cardCornerRadius="4dp">
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:id="@+id/readFile"
-                android:background="?android:attr/selectableItemBackgroundBorderless"
-                android:text="@string/read_file"/>
+                android:background="#fff"
+                android:orientation="vertical"
+                android:paddingBottom="20dp">
 
-            <TextView
-                android:id="@+id/readPathEditText"
-                android:layout_width="500dp"
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="49dp">
+
+                <View
+                    android:layout_width="3dp"
+                    android:layout_height="15dp"
+                    android:layout_centerVertical="true"
+                    android:background="#4A90E2" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="17dp"
+                    android:layout_marginTop="16dp"
+                    android:text="@string/source_folder"
+                    android:textColor="#333"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+
+                <Button
+                    android:layout_width="90dp"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="5dp"
+                    android:gravity="center"
+                    android:paddingStart="10dp"
+                    android:paddingEnd="10dp"
+                    android:id="@+id/readFile"
+                    android:background="?android:attr/selectableItemBackgroundBorderless"
+                    android:text="@string/read_file"/>
+                </RelativeLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginStart="17dp"
+                    android:layout_marginEnd="17dp"
+                    android:background="@drawable/background_line" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="17dp"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginEnd="17dp">
+
+                    <TextView
+                        android:layout_width="50dp"
+                        android:layout_height="wrap_content"
+                        android:text="名称"
+                        android:textColor="#666"
+                        android:textSize="14sp" />
+
+                   <TextView
+                       android:id="@+id/readPathEditText"
+                       android:layout_width="0dp"
+                       android:layout_height="wrap_content"
+                       android:layout_weight="1"
+                       android:paddingTop="5dp"
+                       android:paddingBottom="5dp"
+                       android:singleLine="true"
+                       android:text=""
+                       android:textColor="#333333" />
+
+                </LinearLayout>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+<!--        <LinearLayout-->
+<!--            android:orientation="horizontal"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="60dp">-->
+
+<!--            <Button-->
+<!--                android:layout_width="90dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="center_vertical"-->
+<!--                android:id="@+id/saveFile"-->
+<!--                android:background="?android:attr/selectableItemBackgroundBorderless"-->
+<!--                android:text="@string/write_file"/>-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/savePathEditText"-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_weight="1"-->
+<!--                android:layout_gravity="center_vertical" />-->
+
+<!--        </LinearLayout>-->
+
+<!--        源目录卡片-->
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="12dp"
+            app:cardCornerRadius="4dp">
+<!--            卡片内部为线性布局-->
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_gravity="center_vertical" />
+                android:background="#fff"
+                android:orientation="vertical"
+                android:paddingBottom="20dp">
 
-        </LinearLayout>
+<!--                第一排，名称与功能为相对布局-->
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="49dp">
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp">
+                    <View
+                        android:layout_width="3dp"
+                        android:layout_height="15dp"
+                        android:layout_centerVertical="true"
+                        android:background="#4A90E2" />
 
-            <Button
-                android:layout_width="90dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:id="@+id/saveFile"
-                android:background="?android:attr/selectableItemBackgroundBorderless"
-                android:layout_alignParentBottom="true"
-                android:text="@string/write_file"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="17dp"
+                        android:layout_marginTop="16dp"
+                        android:text="@string/purpose_folder"
+                        android:textColor="#333"
+                        android:textSize="14sp"
+                        android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/savePathEditText"
-                android:layout_width="500dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_gravity="center_vertical" />
+                    <Button
+                        android:layout_width="90dp"
+                        android:layout_height="match_parent"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginEnd="5dp"
+                        android:gravity="center"
+                        android:paddingStart="10dp"
+                        android:paddingEnd="10dp"
+                        android:id="@+id/saveFile"
+                        android:background="?android:attr/selectableItemBackgroundBorderless"
+                        android:text="@string/write_file"/>
+                </RelativeLayout>
+<!--                名称下方的名称等信息显示区域-->
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginStart="17dp"
+                    android:layout_marginEnd="17dp"
+                    android:background="@drawable/background_line" />
 
-        </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="17dp"
+                    android:layout_marginTop="12dp"
+                    android:orientation="horizontal"
+                    android:layout_marginEnd="17dp">
+
+                    <TextView
+                        android:id="@+id/file_name_title"
+                        android:layout_width="50dp"
+                        android:layout_height="wrap_content"
+                        android:text="名称"
+                        android:textColor="#666"
+                        android:textSize="14sp" />
+
+                    <TextView
+                        android:id="@+id/savePathEditText"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:singleLine="true"
+                        android:text=""
+                        android:textColor="#333333" />
+
+                </LinearLayout>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
         <LinearLayout
             android:orientation="horizontal"
@@ -104,6 +273,7 @@
                 app:cornerRadius="30dp"
                 app:backgroundTint="@color/colorPrimaryDark"
                 android:text="@string/encrypt"
+                android:stateListAnimator="@null"
                 android:textAllCaps="false"/>
 
             <com.google.android.material.button.MaterialButton
@@ -116,6 +286,7 @@
                 android:layout_marginRight="10dp"
                 app:backgroundTint="@color/colorPrimaryDark"
                 android:text="@string/decrypt"
+                android:stateListAnimator="@null"
                 android:textAllCaps="false"/>
 
             <ProgressBar
