--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,36 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="软件">
+    <item android:title="@string/software">
         <menu>
         <group android:checkableBehavior="single">
             <item
                 android:id="@+id/home"
                 android:icon="@drawable/ic_home"
-                android:title="主界面" />
+                android:title="@string/main_page" />
             <item
                 android:id="@+id/info"
                 android:icon="@drawable/info"
-                android:title="关于" />
+                android:title="@string/info_about" />
         </group>
         </menu>
     </item>
 
-    <item android:title="加密信息功能">
+    <item android:title="@string/crypt_info_function">
         <menu>
         <group android:checkableBehavior="single">
             <item
                 android:id="@+id/navTextLayout"
                 android:icon="@drawable/ic_text"
-                android:title="文本加密" />
+                android:title="@string/text_encrypt" />
             <item
                 android:id="@+id/navFileLayout"
                 android:icon="@drawable/ic_file"
-                android:title="文件加密" />
+                android:title="@string/file_encrypt" />
             <item
                 android:id="@+id/navPicLayout"
                 android:icon="@drawable/ic_pic"
-                android:title="图片加密" />
+                android:title="@string/pic_decrypt" />
         </group>
         </menu>
     </item>
