--- a/app/src/main/res/layout/about_content.xml
+++ b/app/src/main/res/layout/about_content.xml
@@ -13,6 +13,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"/>
-
+    <include layout="@layout/card_about_device"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"/>
 
 </LinearLayout>
