improve the UI of QR code Activity ; add the personalized selection of search engines ; add a switch for the bing picture on the homepage

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,169 +4,70 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#D9D9D9">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-            <androidx.appcompat.widget.Toolbar
+        <!-- 图片区域 -->
+        <ImageView
+            android:id="@+id/image_bing"
+            android:scaleType="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </ImageView>
+
+        <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/colorPrimary"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
-            </androidx.appcompat.widget.Toolbar>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#fafafa"
-            android:hardwareAccelerated="true"
-            android:orientation="vertical">
-            <!-- 顶部地址栏 -->
+            android:background="#00000000"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            android:fitsSystemWindows="true"/>
+<!--            搜索框-->
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/top_bar_height"
+                android:background="@drawable/search_corner"
                 android:orientation="horizontal"
-                android:background="@drawable/top_bar_bg">
-
-                <ImageView
-                    android:id="@+id/webIcon"
-                    android:layout_width="@dimen/top_bar_height"
-                    android:layout_height="@dimen/top_bar_height"
-                    android:contentDescription="favicon"
-                    android:focusable="true"
-                    android:focusableInTouchMode="true"
-                    android:padding="11dp"
-                    android:src="@drawable/web_internet"
-                    android:background="#01000000"/>
-
-                <EditText
-                    android:id="@+id/textUrl"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginBottom="200dp"
+                android:layout_above="@+id/nav_bottom">
+                <TextView
+                    android:id="@+id/search_text_tv"
+                    android:textSize="13sp"
+                    android:lines="1"
+                    android:layout_gravity="center_vertical"
                     android:layout_width="0dp"
-                    android:layout_height="34dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:layout_marginTop="3dp"
-                    android:background="#01000000"
-                    android:hint="@string/input_url"
-                    android:imeOptions="actionGo"
-                    android:inputType="textUri"
-                    android:maxLines="1"
-                    android:textSize="15sp"
-                    android:textColor="#606060"
-                    android:textColorHint="#9f9f9f"/>
-
+                    android:layout_marginStart="25dp"
+                    android:background="@android:color/transparent"
+                    android:hint="@string/take_thing_you_want_search_here"/>
                 <ImageView
-                    android:id="@+id/btnStart"
-                    android:layout_width="@dimen/top_bar_height"
-                    android:layout_height="@dimen/top_bar_height"
-                    android:contentDescription="refresh"
-                    android:padding="11dp"
-                    android:layout_marginRight="2dp"
-                    android:layout_marginEnd="2dp"
-                    android:src="@drawable/web_refresh"
-                    android:background="#01000000"/>
-
+                    android:id="@+id/search_button"
+                    android:src="@drawable/ic_search"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
             </LinearLayout>
 
-            <!-- 浏览器容器区域 -->
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_marginTop="1dp"
-                android:layout_marginBottom="1dp"
-                android:background="#d1d1d1">
-
-                <WebView
-                    android:id="@+id/webView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-                <!-- 网页进度条 -->
-                <ProgressBar
-                    android:id="@+id/progressBar"
-                    style="?android:attr/progressBarStyleHorizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:max="100"
-                    android:progress="50" />
-            </FrameLayout>
-
-            <!-- 底部导航栏 -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:baselineAligned="false"
-                android:orientation="horizontal">
-
-                <!-- 后退按钮 -->
-                <RelativeLayout style="@style/NavItem">
-
-                    <ImageView
-                        android:id="@+id/goBack"
-                        style="@style/NavIcon"
-                        android:contentDescription="@string/nav_left"
-                        android:src="@drawable/web_left" />
-
-                </RelativeLayout>
-
-                <!-- 前进按钮 -->
-                <RelativeLayout style="@style/NavItem">
-
-                    <ImageView
-                        android:id="@+id/goForward"
-                        style="@style/NavIcon"
-                        android:contentDescription="@string/nav_right"
-                        android:src="@drawable/web_right" />
-
-                </RelativeLayout>
-
-                <!-- 菜单 -->
-                <RelativeLayout style="@style/NavItem">
-
-                    <ImageView
-                        android:id="@+id/navSet"
-                        style="@style/NavIcon"
-                        android:contentDescription="@string/nav_set"
-                        android:src="@drawable/web_setting" />
-
-                </RelativeLayout>
-
-                <!-- 窗口按钮 -->
-                <RelativeLayout style="@style/NavItem">
-
-
-                    <ImageView
-                        style="@style/NavIcon"
-                        android:contentDescription="@string/nav_page"
-                        android:src="@drawable/web_page" />
-
-                    <TextView
-                        style="@style/NavIcon"
-                        android:gravity="center"
-                        android:text="1"
-                        android:textAlignment="center"
-                        android:textColor="#555"
-                        android:textSize="12sp" />
-
-                </RelativeLayout>
-
-                <!-- 主页按钮 -->
-                <RelativeLayout style="@style/NavItem">
-
-                    <ImageView
-                        android:id="@+id/goHome"
-                        style="@style/NavIcon"
-                        android:contentDescription="@string/nav_home"
-                        android:src="@drawable/web_home" />
-
-                </RelativeLayout>
-            </LinearLayout>
+        <!-- 底部导航栏 -->
+        <LinearLayout
+            android:id="@+id/nav_bottom"
+            android:layout_alignParentBottom="true"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:baselineAligned="false"
+            android:orientation="horizontal"
+            android:background="@android:color/transparent">
         </LinearLayout>
-    </LinearLayout>
+    </RelativeLayout>
+
+
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navView"
         android:layout_width="match_parent"
