--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -12,6 +12,10 @@
                 android:id="@+id/info"
                 android:icon="@drawable/info"
                 android:title="@string/info_about" />
+            <item
+                android:id="@+id/settings"
+                android:icon="@drawable/ic_settings"
+                android:title="@string/settings"/>
         </group>
         </menu>
     </item>
